--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
  <!--The contacts section-->
     <section id="contact" class="js-slidein" >
-        <div class="container-fluid text-center padding row bounceIn">
+        <div class="container-fluid text-center padding row">
         <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8">
             <h2 class="display-4 contact js-slidein">Contact Us</h2>
     <form action="http://formspree.io/f/xoqprpqa" method="POST">
@@ -257,7 +257,7 @@
     </form>
     </div>
 
-    <div  class="col-xs-12 col-sm-12 col-md-5 col-lg-4 js-slidein" id="address">
+    <div  class="col-xs-12 col-sm-12 col-md-5 col-lg-4 text-center align-items-center js-slidein" id="address">
         <h3 class="address">Contact</h3>
         <p>Calabar, Cross River State, Nigeria.</p>
         <p> kingsleygeorge171@gmail.com</p>
