--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="container-fluid page-header"> 
     <div class="row" id="welcome-section">
     <div class="col-lg-6 col-md-6 col-sm-12">
-        <img class="rounded-circle img-fluid" width="350px" height="350px" src="DSC_0925.JPG" alt="My picture" id="img">
+        <img class="rounded-circle img-fluid" width="350px" height="350px" src="DSC_0925.JPG" alt="My picture" loading="lazy" id="img">
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 text-center typewrite" id="hey">
         <h2 class="feature-title ">Hey There, I am Kingsley</h2>
@@ -76,7 +76,7 @@
         <div class="row">
 <h2 class="display-4 mx-auto">About</h2>
 <p id="about-p" class="js-slidein"><strong>HI There! I'm Kingsley</strong><br><br>
-    A currently a frontend developer and a tutor who hopes to become a full stack developer in the nearest future. I am passionate and driven about my work, because it gives me great joy to be able to solve problems with bunch of codes, I have a steady source of motivation that drives me to do my best. I challenge myself daily and always excited to learn new skills that helps me to do a better work. I have an intermidiate knowledge of HTML, CSS, Bootstrap and a fair knowledge in JavaScript, JQuery, PHP and MySQL. Still dirtying my hands with other technologies and improving on my current skills</p>
+    Am currently a frontend developer and a tutor who hopes to become a full stack developer in the nearest future. I am passionate and driven about my work, because it gives me great joy to be able to solve problems with bunch of codes, I have a steady source of motivation that drives me to do my best. I challenge myself daily and always excited to learn new skills that helps me to do a better work. I have an intermidiate knowledge of HTML, CSS, Bootstrap and a fair knowledge in JavaScript, JQuery, PHP and MySQL. Still dirtying my hands with other technologies and improving on my current skills</p>
 </div>
 </div>
 </section>
