--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
    
     <div class="text-center" id="btn">
-    <a href="#works"><button type="button" class="btn btn-outline-light btn-lg btn-center btn-1" >My Works</button></a>
+    <a href="https://www.cognitoforms.com/KingsCode1/KingsleysSurveyForm" target="_blank"><button type="button" class="btn btn-outline-light btn-lg btn-center btn-1" >Appraise Me</button></a>
 </div>
     </div>
 </div>
